--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,12 @@ vignettes/*.pdf
 # Temporary files created by R markdown
 *.utf8.md
 *.knit.md
+
+# My files
+*.R
+*.xlsm
+*.xlsx
+*.xls
+Thumbs.db
+*.Rmd
+old*.md
